--- a/app/src/main/res/layout/list_item_receipt.xml
+++ b/app/src/main/res/layout/list_item_receipt.xml
@@ -13,6 +13,12 @@
         android:text="Receipt Title"/>
 
     <TextView
+        android:id="@+id/receipt_shop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Shop" />
+
+    <TextView
         android:id="@+id/receipt_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
