--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -58,6 +58,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/receipt_details_label"/>
+
+    <TextView
+        android:id="@+id/location_latitude"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/location_latitude" />
+
+    <TextView
+        android:id="@+id/location_longitude"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/location_longitiude" />
+
+    <Button
+        android:id="@+id/show_map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/map_show" />
+
     <Button
         android:id="@+id/receipt_date"
         android:layout_width="match_parent"
@@ -67,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/receipt_comment_hint"/>
+
     <Button
         android:id="@+id/receipt_report"
         android:layout_width="match_parent"
