--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -60,7 +60,7 @@
         android:text="@string/receipt_details_label"/>
 
     <TextView
-        android:id="@+id/location_latitude"
+        android:id="@+id/receipt_latitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/location_latitude" />
